--- a/colist-app/src/components/ui/member/Member.module.css
+++ b/colist-app/src/components/ui/member/Member.module.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 20px;
+    margin-bottom: 10px;
     border: 1px solid var(--color-border);
     border-radius: var(--radius-medium);
     background-color: var(--color-surface);
